# splendor_ia

./: .gitignore  FEATURE_ENGINEERING_RECAP.md  ISMCTS.py  Model_two_players.ipynb  README.md  board.py  cards.py  characters.py  constants.py  create_database.py  custom_operators.py  games.db  load_database.py  main.py  move.py  node.py  player.py  pyproject.toml  run_preprocessing.py
Two_player_model/: Model_two_players.ipynb
app_docs/: feature-board-state-reconstruction.md  feature-enhanced-game-data-storage.md  feature-illegal-action-masking.md  feature-memory-efficient-batch-processing.md  feature-ml-dataset-export.md
data/: games.db  simulation_config.txt  simulation_log.txt
docs/: hyperparameter_tuning_guide.md  state_reconstruction_guide.md
scripts/: analyze_features.py  architecture_diagram_multiplayer.py  batch_validate_reconstruction.py  calculate_avg_turn_time.sh  clean_csv_nan_values.py  count_lines.py  create_database.py  data_collector.py  evaluate_multiple_models.py  export_feature_row.py  export_ml_dataset.py  fix_csv_gem_encoding.py  load_database.py  main.py  play_with_model.py  plot_model_comparison.py  replay_game.py  test_model_player.py  test_reconstruction.py  train_and_organize.sh  validate_dataset.py
specs/: action-decoder-logic-order.md  add-precise-typing.md  advanced-feature-engineering.md  ai-player-feature-dimension-mismatch.md  ai-player-implementation.md  bug-action-masking-training-issues.md  bug-avg-duration-performance.md  bug-csv-export-gem-take-encoding.md  bug-csv-export-missing-card-features.md  clean-csv-nan-values.md  (+26 more)
(+36 files in other folders)
